--- a/src/_includes/header.html
+++ b/src/_includes/header.html
@@ -18,7 +18,7 @@
           <a class="page-link" href="/blog">Blog</a>
         </li>
         <li>
-          <a class="page-link" href="/tags/news">Devlogs</a>
+          <a class="page-link" href="/tags/devlogs">Devlogs</a>
         </li>
         <li>
           <a class="page-link" href="/contact">Contact</a>
