--- a/src/_sass/realjame/_layout.scss
+++ b/src/_sass/realjame/_layout.scss
@@ -203,6 +203,31 @@
 	margin-left: 0;
 	list-style: none;
 
+	@include media-query($small-screen) {
+		padding: 0;
+	}
+
+	li {
+		border: 2px solid $border-color;
+		border-radius: 2px;
+		padding-left: 0.5em;
+		background-color: $nav-background-color;
+		text-align: center;
+
+		@include light-mode() {
+			border-color: $border-color-light;
+		}
+
+		img {
+			width: auto;
+			height: auto;
+		}
+
+		@include media-query($small-screen) {
+			padding: 0;
+		}
+	}
+
 	> li > a {
 		@include relative-font-size(1.4);
 		font-weight: bold;
@@ -262,15 +287,40 @@
 
 .small-entry {
 	display: flex;
-	align-items: center;
+	height: 100%;
+	justify-content: center;
 
-	.post-meta {
-		margin-right: 1em;
-		white-space: nowrap;
+	@include media-query($small-screen) {
+		flex-direction: column;
+		padding: 0;
 	}
 
-	.post-link {
-		font-size: 25px;
+	.stack {
+		width: 100%;
+		display: flex;
+		align-items: center;
+		flex-direction: column;
+		padding-right: 0.5em;
+
+		.post-meta {
+			white-space: nowrap;
+		}
+
+		.post-link {
+			font-size: 25px;
+			text-align: center;
+		}
+	}
+
+	img {
+		margin: 0;
+		margin-left: auto;
+		align-self: flex-end;
+		justify-self: center;
+
+		@include media-query($small-screen) {
+			min-width: 100%;
+		}
 	}
 }
 
