fix light mode on blog post listing

--- a/src/_sass/realjame/_layout.scss
+++ b/src/_sass/realjame/_layout.scss
@@ -218,6 +218,7 @@
 
 		@include light-mode() {
 			border-color: $border-color-light;
+			background-color: $nav-background-color-light;
 		}
 
 		img {
