--- a/src/_sass/realjame/_base.scss
+++ b/src/_sass/realjame/_base.scss
@@ -138,18 +138,6 @@ li {
 }
 
 /**
- * Headings
- */
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-	// font-weight: $base-font-weight;
-}
-
-/**
  * Links
  */
 a {
@@ -182,7 +170,7 @@ a {
  * Blockquotes
  */
 blockquote {
-	color: $gray-color;
+	color: #808080;
 	border-left: 4px solid $gray-color;
 	border-top-left-radius: 4px;
 	border-bottom-left-radius: 4px;
