--- a/src/_sass/realjame/_syntax-highlighting.scss
+++ b/src/_sass/realjame/_syntax-highlighting.scss
@@ -107,10 +107,16 @@
 		color: #099;
 	} // Literal.Number
 	.s {
-		color: #d14;
+		color: #e1abb8;
+		@include light-mode() {
+			color: #c22b4f;
+		}
 	} // Literal.String
 	.na {
-		color: #008080;
+		color: #13debb;
+		@include light-mode() {
+			color: #047763;
+		}
 	} // Name.Attribute
 	.nb {
 		color: #0086b3;
@@ -137,7 +143,10 @@
 		color: #555;
 	} // Name.Namespace
 	.nt {
-		color: #000080;
+		color: #b7b7ff;
+		@include light-mode() {
+			color: #3e3e9f;
+		}
 	} // Name.Tag
 	.nv {
 		color: #008080;
