Fix video being incorrectly sized on post

--- a/src/_sass/realjame/_base.scss
+++ b/src/_sass/realjame/_base.scss
@@ -105,8 +105,12 @@ img {
  * Videos
  */
 video {
+	display: block;
+
 	max-width: 60%;
-	vertical-align: middle;
+	margin-left: auto;
+	margin-right: auto;
+	height: auto;
 }
 
 /**
