--- a/src/_layouts/post.html
+++ b/src/_layouts/post.html
@@ -2,29 +2,31 @@
 layout: default
 permalink: /blog/:title
 ---
-
 <article
-  class="post h-entry"
-  itemscope
-  itemtype="http://schema.org/BlogPosting">
-  <header class="post-header">
-    <p class="post-meta">
-      <span class="post-description">"{{ page.description }}"</span>
-      <br>
-      <time
-        class="dt-published"
-        datetime="{{ page.date | date_to_xmlschema }}"
-        itemprop="datePublished">
-        {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y"
- -%} {{ page.date | date: date_format }}
-      </time>
-    </p>
-  </header>
+	class="post h-entry"
+	itemscope
+	itemtype="http://schema.org/BlogPosting"
+>
+	<header class="post-header">
+		<p class="post-meta">
+			<span class="post-description">"{{ page.description }}"</span>
+			<br>
+			<time
+				class="dt-published"
+				datetime="{{ page.date | date_to_xmlschema }}"
+				itemprop="datePublished"
+			>
+				{%- assign date_format = site.minima.date_format | default: '%b %-d, %Y' -%}
+				{{ page.date | date: date_format }}
+			</time>
+		</p>
+	</header>
 
-  <div class="post-content e-content" itemprop="articleBody">{{ content }}</div>
+	<div class="post-content e-content" itemprop="articleBody">{{ content }}</div>
 
-  <a
-    class="u-url"
-    href="{{ page.url | relative_url }}"
-    hidden></a>
+	<a
+		class="u-url"
+		href="{{ page.url | relative_url }}"
+		hidden
+	></a>
 </article>
