--- a/src/_sass/realjame.scss
+++ b/src/_sass/realjame.scss
@@ -2,7 +2,8 @@
 
 @font-face {
 	font-family: "PT Sans";
-	src: url("/assets/fonts/PT-Sans/pt-sans_regular.woff2") format("woff2"),
+	src:
+		url("/assets/fonts/PT-Sans/pt-sans_regular.woff2") format("woff2"),
 		url("/assets/fonts/PT-Sans/pt-sans_regular.woff") format("woff");
 	font-weight: normal;
 	font-style: normal;
@@ -11,7 +12,8 @@
 
 @font-face {
 	font-family: "PT Sans Bold";
-	src: url("/assets/fonts/PT-Sans/pt-sans_bold.woff2") format("woff2"),
+	src:
+		url("/assets/fonts/PT-Sans/pt-sans_bold.woff2") format("woff2"),
 		url("/assets/fonts/PT-Sans/pt-sans_bold.woff") format("woff");
 	font-weight: bold;
 	font-style: normal;
@@ -20,7 +22,8 @@
 
 @font-face {
 	font-family: "PT Sans Italic";
-	src: url("/assets/fonts/PT-Sans/pt-sans_italic.woff2") format("woff2"),
+	src:
+		url("/assets/fonts/PT-Sans/pt-sans_italic.woff2") format("woff2"),
 		url("/assets/fonts/PT-Sans/pt-sans_italic.woff") format("woff");
 	font-weight: normal;
 	font-style: italic;
@@ -29,7 +32,8 @@
 
 @font-face {
 	font-family: "PT Sans Bold Italic";
-	src: url("/assets/fonts/PT-Sans/pt-sans_bold-italic.woff2") format("woff2"),
+	src:
+		url("/assets/fonts/PT-Sans/pt-sans_bold-italic.woff2") format("woff2"),
 		url("/assets/fonts/PT-Sans/pt-sans_bold-italic.woff") format("woff");
 	font-weight: bold;
 	font-style: italic;
