Continue improving redesign layout with a better centered/sized main content, cards view for blog post indexes on big screens, experiment with a purple background for headers, and start a new Daily Notes section (placeholder)

--- a/src/_includes/header.html
+++ b/src/_includes/header.html
@@ -1,30 +1,36 @@
-<header class="site-header" role="banner">
-  {%- assign default_paths = site.pages | map: 'path' -%}
-  {%- assign page_paths = site.header_pages | default: default_paths -%}
-  <h1 class="page-title">{{ site.title | "realjame" }}</h1>
+<!-- Actually the sidebar -->
 
-  {%- if page_paths -%}
-    <nav class="site-nav">
-      <ul class="header-bar">
-        <li>
-          <a class="page-link" href="/"> Home</a>
-        </li>
-        <li>
-          <a class="page-link" href="/blog">Blog</a>
-        </li>
-        <li>
-          <a class="page-link" href="/tags/devlogs">Devlogs</a>
-        </li>
-        <li>
-          <a class="page-link" href="/projects">Projects</a>
-        </li>
-        <li>
-          <a class="page-link" href="/contact">Contact</a>
-        </li>
-        <li>
-          <a class="page-link" href="/aboutme">About Me</a>
-        </li>
-      </ul>
-    </nav>
-  {%- endif -%}
+<header class="site-header" role="banner">
+    {%- assign default_paths = site.pages | map: 'path' -%}
+    {%- assign page_paths = site.header_pages | default: default_paths -%}
+    <h1 class="page-title">{{ site.title | "realjame" }}</h1>
+
+    {%- if page_paths -%}
+        <nav class="site-nav">
+            <ul class="header-bar">
+                <li>
+                    <a class="page-link" href="/">
+                        Home</a>
+                </li>
+                <li>
+                    <a class="page-link" href="/blog">Blog</a>
+                </li>
+                <li>
+                    <a class="page-link" href="/daily">Daily Notes</a>
+                </li>
+                <li>
+                    <a class="page-link" href="/tags/devlogs">Devlogs</a>
+                </li>
+                <li>
+                    <a class="page-link" href="/projects">Projects</a>
+                </li>
+                <li>
+                    <a class="page-link" href="/contact">Contact</a>
+                </li>
+                <li>
+                    <a class="page-link" href="/aboutme">About Me</a>
+                </li>
+            </ul>
+        </nav>
+    {%- endif -%}
 </header>
