Another big update chunk. Implement daily notes system and index, along with the first note on installing Ruby on Debian. Convert blog home to a standard html page and try to improve the flex layout slightly. Add TODOs with marquees. Probably more

--- a/src/_layouts/tag.html
+++ b/src/_layouts/tag.html
@@ -1,19 +1,20 @@
 ---
   layout: default
 ---
+<marquee>TODO: These tag indexes kinda SUCK</marquee>
 <ul class="post-list">
-	{%- for post in site.posts -%}
-		{% if post.tags contains page.title %}
-			<li>
-				{%- assign date_format = site.minima.date_format | default: '%b %-d, %Y' -%}
-				<span class="post-meta">{{ post.date | date: date_format }}</span>
-				<a class="post-link" href="{{ post.url | relative_url }}">
-					<p>{{ post.title | default: '-Untitled-' }}</p>
-				</a>
-				{%- if post.description -%}
-					{{ post.description }}
-				{%- endif -%}
-			</li>
-		{% endif %}
-	{%- endfor -%}
+    {%- for post in site.posts -%}
+        {% if post.tags contains page.title %}
+            <li>
+                {%- assign date_format = site.minima.date_format | default: '%b %-d, %Y' -%}
+                <span class="post-meta">{{ post.date | date: date_format }}</span>
+                <a class="post-link" href="{{ post.url | relative_url }}">
+                    <p>{{ post.title | default: '-Untitled-' }}</p>
+                </a>
+                {%- if post.description -%}
+                    {{ post.description }}
+                {%- endif -%}
+            </li>
+        {% endif %}
+    {%- endfor -%}
 </ul>
