--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -1,29 +1,29 @@
 <footer class="site-footer h-card">
-	<data class="u-url" href="{{ " /" | relative_url }}"></data>
+    <data class="u-url" href="{{ " /" | relative_url }}"></data>
 
-	<ul class="footer-bar">
-		<li>
-			<a class="u-email" href="mailto:{{ site.email }}">{{ site.email }}</a>
-		</li>
+    <ul class="footer-bar">
+        <li>
+            <a class="u-email" href="mailto:{{ site.email }}">{{ site.email }}</a>
+        </li>
 
-		<li>
-			<a href="https://twitter.com/real__jame">
-				<svg class="svg-icon">
-					<use xlink:href="{{ '/assets/minima-social-icons.svg#twitter' | relative_url }}"></use>
-				</svg>
-				<span class="username">@real__jame</span>
-			</a>
-		</li>
+        <li>
+            <a href="https://twitter.com/real__jame">
+                <svg class="svg-icon">
+                    <use xlink:href="{{ '/assets/minima-social-icons.svg#twitter' | relative_url }}"></use>
+                </svg>
+                <span class="username">@real__jame</span>
+            </a>
+        </li>
 
-		<li>
-			<a rel="me" href="https://wetdry.world/@jame">
-				<img
-					class="svg-icon"
-					src="{{ '/assets/mastodon.svg' | relative_url }}"
-					alt="Mastodon"
-				>
-				<span class="username">@jame@wetdry.world</span>
-			</a>
-		</li>
-	</ul>
+        <li>
+            <a rel="me" href="https://wetdry.world/@jame">
+                <img
+                    class="svg-icon"
+                    src="{{ '/assets/mastodon.svg' | relative_url }}"
+                    alt="Mastodon">
+                <span class="username">@jame@wetdry.world</span>
+            </a>
+        </li>
+        <marquee>TODO: revamp this to fit the redesigned layout somehow</marquee>
+    </ul>
 </footer>
