--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -1,16 +1,16 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="{{ page.lang | default: site.lang | default: "en" }}">
-	{%- include head.html -%}
+    {%- include head.html -%}
 
-	<body>
-		{%- include header.html -%}
+    <body>
+        {%- include header.html -%}
 
-		<main class="page-content" aria-label="Content">
-			<div class="wrapper">
-				{{ content }}
-			</div>
-		</main>
+        <main class="page-content" aria-label="Content">
+            <div class="wrapper">
+                {{ content }}
+            </div>
+        </main>
 
-		{%- include footer.html -%}
-	</body>
+        {%- include footer.html -%}
+    </body>
 </html>
