--- a/src/_sass/realjame/_layout.scss
+++ b/src/_sass/realjame/_layout.scss
@@ -230,10 +230,12 @@
 	line-height: normal; // override to match realja.me
 }
 
+// TODO: why are these separate classes? merge them
 .post-list {
 	margin-left: 0;
 	list-style: none;
 	display: flex;
+	flex-wrap: wrap;
 
 	@include media-query($small-screen) {
 		padding: 0;
@@ -251,6 +253,10 @@
 
 		display: flex;
 		flex-direction: column;
+		justify-content: space-between;
+
+		min-width: 40%;
+		flex: 1;
 
 		@include light-mode() {
 			border-color: $border-color-light;
@@ -265,6 +271,11 @@
 	> li > a {
 		@include relative-font-size(1.4);
 		font-weight: bold;
+	}
+
+	img {
+		max-width: 100%;
+		height: auto;
 	}
 }
 
@@ -331,6 +342,20 @@
 	}
 }
 
+.topics {
+	a {
+		background-color: rgb(53, 57, 59);
+		border-color: rgb(101, 94, 83);
+		text-decoration: none;
+
+		padding: 3px;
+		border: 1px solid #777;
+		font-size: 0.65em;
+		position: relative;
+		top: -1px;
+	}
+}
+
 // .small-entry {
 // 	// display: flex;
 // 	// height: 100%;
@@ -369,19 +394,29 @@
 // 		}
 // 	}
 // }
-// TODO: Get rid of using small entry / stacks, unused in the redesign.
 
-.green-tag {
-	background-color: green;
+.tag {
 	color: white;
 	padding-left: 0.5em;
 	padding-right: 0.5em;
 	border-radius: 1em;
 }
 
+.green {
+	background-color: green;
+}
+
+.blue {
+	background-color: mediumblue;
+}
+
 /**
  * Posts
  */
+.post {
+	max-width: inherit;
+}
+
 .post-header {
 	margin-bottom: $spacing-unit;
 }
