Implement icons for tags and the sidebar, rework tagcloud to be dynamic so it can be used for blog, devlog and dailynote, tagcloud now also shows post total

--- a/src/_includes/rss.html
+++ b/src/_includes/rss.html
@@ -1,6 +1,6 @@
 <div class="rss-subscribe-list">
     <a href="/feed.xml"><img
-            src="../assets/feedicons-color/07.png"
+            src="../assets/silk/feed.png"
             alt=""
             height="16"
             width="16"
