--- a/src/_includes/header.html
+++ b/src/_includes/header.html
@@ -12,7 +12,7 @@ Actually being used as a sidebar currently.
             <ul class="header-bar">
                 <li>
                     <a class="page-link" href="/"><img
-                            src="../assets/feedicons-color/01.png"
+                            src="../assets/silk/page_world.png"
                             alt=""
                             height="16"
                             width="16"
@@ -29,7 +29,7 @@ Actually being used as a sidebar currently.
                 </li>
                 <li>
                     <a class="page-link" href="/daily"><img
-                            src="../assets/feedicons-color/01.png"
+                            src="../assets/feedicons-color/16.png"
                             alt=""
                             height="16"
                             width="16"
@@ -37,7 +37,7 @@ Actually being used as a sidebar currently.
                 </li>
                 <li>
                     <a class="page-link" href="/devlog"><img
-                            src="../assets/feedicons-color/01.png"
+                            src="../assets/feedicons-color/25.png"
                             alt=""
                             height="16"
                             width="16"
@@ -45,7 +45,7 @@ Actually being used as a sidebar currently.
                 </li>
                 <li>
                     <a class="page-link" href="/projects"><img
-                            src="../assets/feedicons-color/01.png"
+                            src="../assets/silk/bricks.png"
                             alt=""
                             height="16"
                             width="16"
@@ -53,7 +53,7 @@ Actually being used as a sidebar currently.
                 </li>
                 <li>
                     <a class="page-link" href="/contact"><img
-                            src="../assets/feedicons-color/01.png"
+                            src="../assets/silk/link.png"
                             alt=""
                             height="16"
                             width="16"
@@ -61,7 +61,7 @@ Actually being used as a sidebar currently.
                 </li>
                 <li>
                     <a class="page-link" href="/aboutme"><img
-                            src="../assets/feedicons-color/01.png"
+                            src="../assets/silk/vcard.png"
                             alt=""
                             height="16"
                             width="16"
