--- a/src/_sass/realjame/_layout.scss
+++ b/src/_sass/realjame/_layout.scss
@@ -326,36 +326,62 @@
 
 	li {
 		display: inline-block;
-		padding: 1%;
-		border: solid 1px;
-		border-radius: 10px;
 
 		a {
+			border-radius: 10px;
+			padding: 5px 10px;
+			text-decoration: none;
+			color: #afcce7; // Metallic blue for text
+			background: linear-gradient(135deg, #1e1e1e, #2d2d2d); // A subtle gradient
+			border: 3px double #afcce7; // Double border with metallic blue
+			box-shadow: 0 0 10px #afcce7; // Blue glow around the link
+			text-shadow: 0 0 5px #afcce7; // Text glow for that Y2K feel
+			margin-bottom: 8px;
+			transition: all 0.3s; // Smooth transitions
+			border-radius: 10px;
+
+			.icon {
+				padding: 0;
+				height: 24px;
+				width: 24px;
+				vertical-align: middle;
+			}
+
 			text-decoration: none;
 
 			&:hover {
-				text-decoration: underline;
+				background: linear-gradient(135deg, #2d2d2d, #1e1e1e); // Inverted gradient on hover
+				color: #e1f0fc; // A lighter shade of the blue on hover
+				box-shadow: 0 0 15px #8ab4d3; // Intensified glow on hover
 			}
 		}
 	}
 }
 
+// TODO: we really gotta make this style a standardized thing via a class or something
 .topics {
 	a {
-		background-color: rgb(53, 57, 59);
-		border-color: rgb(101, 94, 83);
+		padding: 5px 10px;
 		text-decoration: none;
+		color: #afcce7; // Metallic blue for text
+		background: linear-gradient(135deg, #1e1e1e, #2d2d2d); // A subtle gradient
+		border: 3px double #afcce7; // Double border with metallic blue
+		box-shadow: 0 0 10px #afcce7; // Blue glow around the link
+		text-shadow: 0 0 5px #afcce7; // Text glow for that Y2K feel
+		margin-bottom: 8px;
+		transition: all 0.3s; // Smooth transitions
+		border-radius: 10px;
 
-		padding: 3px;
-		border: 1px solid #777;
 		font-size: 0.65em;
 		position: relative;
 		top: -1px;
-	}
-}
 
-body {
-	background-color: #121212; // Deep dark background
+		&:hover {
+			background: linear-gradient(135deg, #2d2d2d, #1e1e1e); // Inverted gradient on hover
+			color: #e1f0fc; // A lighter shade of the blue on hover
+			box-shadow: 0 0 15px #8ab4d3; // Intensified glow on hover
+		}
+	}
 }
 
 .rss-subscribe-list {
@@ -370,6 +396,7 @@ body {
 		text-shadow: 0 0 5px #afcce7; // Text glow for that Y2K feel
 		margin-bottom: 8px;
 		transition: all 0.3s; // Smooth transitions
+		border-radius: 10px;
 
 		&:hover {
 			background: linear-gradient(135deg, #2d2d2d, #1e1e1e); // Inverted gradient on hover
